--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,1 +1,20 @@
 
+version: '3'
+services:
+  http:
+    image: local/http:latest
+    ports:
+      - "5000:5000"
+  pricing:
+    image: local/pricing:latest
+  ranking:
+    image: local/ranking:latest
+  kafka:
+    image: spotify/kafka
+    ports:
+      - "2181:2181"
+      - "9092:9092"
+    environment:
+      ADVERTISED_HOST: 0.0.0.0
+      ADVERTISED_PORT: 9092
+      KAFKA_CREATE_TOPICS: "ranking:1:1,rankingwithprice:1:1"
