--- a/http/Makefile
+++ b/http/Makefile
@@ -3,4 +3,4 @@ app.up:
 install:
 	pip install -r src/requirements.txt
 build:
-	docker build -t local/pricing -f docker/Dockerfile src/
+	docker build -t local/http -f docker/Dockerfile src/
